[gd_scene load_steps=29 format=2]

[ext_resource path="res://GUI/FullLogo.png" type="Texture" id=1]
[ext_resource path="res://GUI/Buttons/NewGame.png" type="Texture" id=2]
[ext_resource path="res://GUI/Buttons/LoadGame.png" type="Texture" id=3]
[ext_resource path="res://GUI/Buttons/ExitGame.png" type="Texture" id=4]
[ext_resource path="res://GUI/Buttons/OptionsMenu.png" type="Texture" id=5]
[ext_resource path="res://GUI/Buttons/Hover/OptionsMenuHover.png" type="Texture" id=6]
[ext_resource path="res://GUI/Buttons/Hover/ExitGameHover.png" type="Texture" id=7]
[ext_resource path="res://GUI/Buttons/Hover/NewGameHover.png" type="Texture" id=8]
[ext_resource path="res://GUI/Buttons/Hover/LoadGameHover.png" type="Texture" id=9]
[ext_resource path="res://Scripts/GUI/MainMenuHandler.gd" type="Script" id=10]
[ext_resource path="res://GUI/Labels/0Label.png" type="Texture" id=11]
[ext_resource path="res://GUI/Labels/100Label.png" type="Texture" id=12]
[ext_resource path="res://GUI/Buttons/Hover/BackMainMenuHover.png" type="Texture" id=13]
[ext_resource path="res://GUI/Buttons/BackMainMenu.png" type="Texture" id=14]
[ext_resource path="res://GUI/Labels/MasterVolumeLabel.png" type="Texture" id=15]
[ext_resource path="res://GUI/Labels/GameResolutionLabel.png" type="Texture" id=16]
[ext_resource path="res://GUI/Buttons/ArrowButton.png" type="Texture" id=17]
[ext_resource path="res://GUI/Styles/SeparatorThickStyle.tres" type="StyleBox" id=18]
[ext_resource path="res://Music/Acoustic Folk Instrumental - Hyde - Free Instrumentals [Vlog No Copyright Music].ogg" type="AudioStream" id=19]
[ext_resource path="res://GUI/Minecraft.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://GUI/Styles/MainMenuTheme.theme" type="Theme" id=21]
[ext_resource path="res://GUI/Labels/MusicVolumeLabel.png" type="Texture" id=22]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 20 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="MainMenu"]
margin_left = 40.0
margin_top = 40.0
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Logo" type="TextureRect" parent="MainMenu/Container"]
margin_right = 1840.0
margin_bottom = 490.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InnerContainer" type="VBoxContainer" parent="MainMenu/Container"]
margin_top = 510.0
margin_right = 1840.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 35
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="MainMenu/Container/InnerContainer"]
margin_right = 1840.0
margin_bottom = 70.0
custom_styles/separator = ExtResource( 18 )
custom_constants/separation = 70

[node name="NewGame" type="TextureButton" parent="MainMenu/Container/InnerContainer"]
margin_top = 105.0
margin_right = 1840.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="TextureButton" parent="MainMenu/Container/InnerContainer"]
margin_top = 193.0
margin_right = 1840.0
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Options" type="TextureButton" parent="MainMenu/Container/InnerContainer"]
margin_top = 281.0
margin_right = 1840.0
margin_bottom = 334.0
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Exit" type="TextureButton" parent="MainMenu/Container/InnerContainer"]
margin_top = 369.0
margin_right = 1840.0
margin_bottom = 422.0
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="MainMenu/Container/InnerContainer"]
margin_top = 457.0
margin_right = 1840.0
margin_bottom = 487.0
custom_styles/separator = ExtResource( 18 )
custom_constants/separation = 30

[node name="Tween" type="Tween" parent="MainMenu/Container/InnerContainer"]

[node name="OptionsMenu" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenu"]
margin_left = 40.0
margin_top = 40.0
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox1" type="VBoxContainer" parent="OptionsMenu/HBoxContainer"]
margin_right = 891.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="OptionsMenu/HBoxContainer/VBox1"]
margin_right = 891.0
margin_bottom = 4.0
custom_styles/separator = ExtResource( 18 )

[node name="HBoxResolution" type="HBoxContainer" parent="OptionsMenu/HBoxContainer/VBox1"]
margin_top = 8.0
margin_right = 891.0
margin_bottom = 333.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameResolution" type="TextureRect" parent="OptionsMenu/HBoxContainer/VBox1/HBoxResolution"]
margin_right = 416.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 16 )
expand = true
stretch_mode = 6

[node name="VSeparator2" type="VSeparator" parent="OptionsMenu/HBoxContainer/VBox1/HBoxResolution"]
margin_left = 420.0
margin_right = 470.0
margin_bottom = 325.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 50

[node name="OptionButton" type="OptionButton" parent="OptionsMenu/HBoxContainer/VBox1/HBoxResolution"]
margin_left = 474.0
margin_top = 152.0
margin_right = 891.0
margin_bottom = 172.0
size_flags_horizontal = 7
size_flags_vertical = 6
theme = ExtResource( 21 )
custom_icons/arrow = ExtResource( 17 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.603922, 0.603922, 0.603922, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0.690196, 0.866667, 1 )
shortcut_in_tooltip = false
text = "1280x720"
expand_icon = true
items = [ "1280x720", null, false, 1, null, "1920x1080", null, false, 2, null, "2540x1440", null, false, 2, null, "3840x2160", null, false, 3, null ]
selected = 0

[node name="HBoxMasterVolume" type="HBoxContainer" parent="OptionsMenu/HBoxContainer/VBox1"]
margin_top = 337.0
margin_right = 891.0
margin_bottom = 662.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MasterVolume" type="TextureRect" parent="OptionsMenu/HBoxContainer/VBox1/HBoxMasterVolume"]
margin_right = 372.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="VSeparator" type="VSeparator" parent="OptionsMenu/HBoxContainer/VBox1/HBoxMasterVolume"]
margin_left = 376.0
margin_right = 462.0
margin_bottom = 325.0
custom_styles/separator = SubResource( 4 )
custom_constants/separation = 86

[node name="0" type="TextureRect" parent="OptionsMenu/HBoxContainer/VBox1/HBoxMasterVolume"]
margin_left = 466.0
margin_right = 481.0
margin_bottom = 325.0
texture = ExtResource( 11 )
stretch_mode = 6

[node name="HSlider" type="HSlider" parent="OptionsMenu/HBoxContainer/VBox1/HBoxMasterVolume"]
margin_left = 485.0
margin_right = 857.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 21 )
rounded = true

[node name="100" type="TextureRect" parent="OptionsMenu/HBoxContainer/VBox1/HBoxMasterVolume"]
margin_left = 861.0
margin_right = 890.0
margin_bottom = 325.0
texture = ExtResource( 12 )
stretch_mode = 6

[node name="HSeparator2" type="HSeparator" parent="OptionsMenu/HBoxContainer/VBox1"]
margin_top = 666.0
margin_right = 891.0
margin_bottom = 670.0
custom_styles/separator = ExtResource( 18 )

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenu/HBoxContainer/VBox1"]
margin_top = 674.0
margin_right = 891.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxMasterVolume2" type="HBoxContainer" parent="OptionsMenu/HBoxContainer/VBox1/MarginContainer"]
margin_right = 891.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackOptions" type="TextureButton" parent="OptionsMenu/HBoxContainer/VBox1/MarginContainer/HBoxMasterVolume2"]
margin_right = 437.0
margin_bottom = 326.0
size_flags_horizontal = 7
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 13 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="OptionsMenu/HBoxContainer/VBox1/MarginContainer/HBoxMasterVolume2"]
margin_left = 441.0
margin_right = 891.0
margin_bottom = 326.0
custom_styles/separator = SubResource( 5 )
custom_constants/separation = 450

[node name="VSeparator" type="VSeparator" parent="OptionsMenu/HBoxContainer"]
margin_left = 895.0
margin_right = 945.0
margin_bottom = 1000.0
custom_styles/separator = SubResource( 6 )
custom_constants/separation = 50

[node name="VBox2" type="VBoxContainer" parent="OptionsMenu/HBoxContainer"]
margin_left = 949.0
margin_right = 1840.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="OptionsMenu/HBoxContainer/VBox2"]
margin_right = 891.0
margin_bottom = 4.0
custom_styles/separator = ExtResource( 18 )

[node name="HBoxMusicVolume" type="HBoxContainer" parent="OptionsMenu/HBoxContainer/VBox2"]
margin_top = 8.0
margin_right = 891.0
margin_bottom = 333.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MasterVolume" type="TextureRect" parent="OptionsMenu/HBoxContainer/VBox2/HBoxMusicVolume"]
margin_right = 372.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 22 )
expand = true
stretch_mode = 6

[node name="VSeparator" type="VSeparator" parent="OptionsMenu/HBoxContainer/VBox2/HBoxMusicVolume"]
margin_left = 376.0
margin_right = 462.0
margin_bottom = 325.0
custom_styles/separator = SubResource( 4 )
custom_constants/separation = 86

[node name="0" type="TextureRect" parent="OptionsMenu/HBoxContainer/VBox2/HBoxMusicVolume"]
margin_left = 466.0
margin_right = 481.0
margin_bottom = 325.0
texture = ExtResource( 11 )
stretch_mode = 6

[node name="HSliderMusic" type="HSlider" parent="OptionsMenu/HBoxContainer/VBox2/HBoxMusicVolume"]
margin_left = 485.0
margin_right = 857.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 21 )
min_value = 50.0
value = 50.0
rounded = true

[node name="100" type="TextureRect" parent="OptionsMenu/HBoxContainer/VBox2/HBoxMusicVolume"]
margin_left = 861.0
margin_right = 890.0
margin_bottom = 325.0
texture = ExtResource( 12 )
stretch_mode = 6

[node name="HBox" type="HBoxContainer" parent="OptionsMenu/HBoxContainer/VBox2"]
margin_top = 337.0
margin_right = 891.0
margin_bottom = 662.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="OptionsMenu/HBoxContainer/VBox2"]
margin_top = 666.0
margin_right = 891.0
margin_bottom = 670.0
custom_styles/separator = ExtResource( 18 )

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenu/HBoxContainer/VBox2"]
margin_top = 674.0
margin_right = 891.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxMasterVolume2" type="HBoxContainer" parent="OptionsMenu/HBoxContainer/VBox2/MarginContainer"]
margin_right = 891.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="OptionsMenu/HBoxContainer/VBox2/MarginContainer/HBoxMasterVolume2"]
margin_right = 450.0
margin_bottom = 326.0
custom_styles/separator = SubResource( 5 )
custom_constants/separation = 450

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -80.0
autoplay = true
bus = "Music"
[connection signal="pressed" from="MainMenu/Container/InnerContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MainMenu/Container/InnerContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="item_selected" from="OptionsMenu/HBoxContainer/VBox1/HBoxResolution/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="OptionsMenu/HBoxContainer/VBox1/HBoxMasterVolume/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="OptionsMenu/HBoxContainer/VBox1/MarginContainer/HBoxMasterVolume2/BackOptions" to="." method="_on_BackOptions_pressed"]
[connection signal="value_changed" from="OptionsMenu/HBoxContainer/VBox2/HBoxMusicVolume/HSliderMusic" to="." method="_on_HSliderMusic_value_changed"]
